Fixed desktop stretch on prop cards, alex implemented overflow scroll on the sideNav on his end fixed width of checkbox translated all styles to mobile in both product item and productContainer/cards adjust lining in desktop version

--- a/client/project-three-peapod/src/components/Product.css
+++ b/client/project-three-peapod/src/components/Product.css
@@ -2,7 +2,6 @@
 
 .entire-main-section {
   display: flex;
-  flex-direction: row;
   margin-top: 10px;
 }
 
@@ -153,7 +152,7 @@
   margin-top: 15px;
 }
 
-.nutrition-div img {
+.reviews-banner-img {
   max-width:500px;
   max-height:100px;
   width: auto;
@@ -325,4 +324,133 @@
   padding: 3px;
   margin: 0;
   border-radius: 1px;
+}
+
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3) {
+  .entire-main-section {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+  }
+
+  .x-axis-main-section {
+    width: 100%;
+}
+
+.main-info-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+
+.main-info-thumbnail {
+  height: 300px;
+  width: 350px;
+  border: 8px solid white;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.icons-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.stack-icons-info {
+  display: flex;
+  flex-direction: column;
+  width: 95%;
+  padding: 5px;
+}
+
+.icons-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.info-div-sub {
+  font-weight: bolder;
+  height: 100px;
+}
+
+.price-button-div-item {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  font-weight: 600;
+  width: 90%;
+  padding: 20px 20px 0 20px;
+  margin: 0;
+}
+
+.reviews-banner-img {
+  max-width: 350px;
+  max-height: 100px;
+  width: auto;
+  height: auto;
+}
+
+.info-for-nutrition {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+  margin-left: 5px;
+}
+
+.info-for-nutrition h3 {
+  font-size: 25px;
+  margin: 5px 0 20px 0;
+}
+
+.nutrition-split-div {
+  width: 95%;
+}
+
+.nutrition-title {
+  border-bottom: 1px solid black;
+  width: 90%;
+}
+
+.substitute-item-div {
+  width: 90%;
+}
+
+.edit-delete-div {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 20px;
+  width: 90%;
+}
+
+/* Y AXIS */
+
+
+.y-axis-main-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.suggestions-div {
+  width: 90%;
+  padding: 0px 20px;
+}
+
+.substitute-checkbox-image {
+  height: 50px;
+}
+
 }
